--- a/images.qrc
+++ b/images.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/images">
-        <file>P1.png</file>
-        <file>P2.png</file>
+        <file>BLUE.png</file>
+        <file>RED.png</file>
     </qresource>
 </RCC>
