--- a/quoridor.ui
+++ b/quoridor.ui
@@ -1618,6 +1618,7 @@
     </property>
     <property name="font">
      <font>
+      <family>Courier New</family>
       <pointsize>10</pointsize>
      </font>
     </property>
